# pfainance

./: .gitignore  data_model.mermaid  hello.py  pyproject.toml
data/processed/: output.md  output_docling.md
data/raw/: account-statement_2020-10-25_2025-03-09_en_4a3e60.csv  account-statement_2020-10-25_2025-03-09_en_bd0678.csv
src/: __init__.py  db.py  document_loader.py  document_loader2.py  local_llm.py  models.py
